--- a/RegisterSupervisorNotifications/RegisterSupervisorNotifications.csproj
+++ b/RegisterSupervisorNotifications/RegisterSupervisorNotifications.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RegisterSupervisorNotificationsLibrary\RegisterSupervisorNotificationsLibrary.csproj" />
+  </ItemGroup>
+
 
 </Project>
