--- a/RegisterSupervisorNotificationsLibrary/RegisterSupervisorNotificationsLibrary.csproj
+++ b/RegisterSupervisorNotificationsLibrary/RegisterSupervisorNotificationsLibrary.csproj
@@ -5,8 +5,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Services\" />
+    <Compile Remove="Models\**" />
+    <Compile Remove="Services\**" />
+    <EmbeddedResource Remove="Models\**" />
+    <EmbeddedResource Remove="Services\**" />
+    <None Remove="Models\**" />
+    <None Remove="Services\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Models\Supervisors.cs" />
+    <Compile Include="Services\Interfaces\INotificationSubscriptionRepo.cs" />
+    <Compile Include="Services\Interfaces\ISupervisorRepo.cs" />
+    <Compile Include="Services\Interfaces\IUnitOfWork.cs" />
+    <Compile Include="Services\UnitOfWork.cs" />
   </ItemGroup>
 
 </Project>
