--- a/RegisterSupervisorNotificationsLibrary/RegisterSupervisorNotificationsLibrary.csproj
+++ b/RegisterSupervisorNotificationsLibrary/RegisterSupervisorNotificationsLibrary.csproj
@@ -14,11 +14,20 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="Models\Supervisors.cs" />
+    <Compile Include="Models\NotificationRequest.cs" />
+    <Compile Include="Models\Supervisor.cs" />
     <Compile Include="Services\Interfaces\INotificationSubscriptionRepo.cs" />
     <Compile Include="Services\Interfaces\ISupervisorRepo.cs" />
     <Compile Include="Services\Interfaces\IUnitOfWork.cs" />
+    <Compile Include="Services\NotificationSubscriptionRepo.cs" />
+    <Compile Include="Services\SupervisorRepo.cs" />
     <Compile Include="Services\UnitOfWork.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.20" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Text.Json" Version="5.0.2" />
   </ItemGroup>
 
 </Project>
